# clients-base

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
dependencies/: admin_auth.py
lib/postgresql/: __init__.py  mixin.py  settings.py  utils.py
lib/security/: password.py  passwords.py
lib/security/jwt/: exceptions.py  token.py
lib/security/jwt/schemas/: user.py
migrations/: env.py
migrations/versions/: 2ac2e8f08904_occ_uuid.py  2c238d2b855a_init.py  31334f695535_fix_trgm.py  431a3ce7678f_user_update.py  46c61e8e717e_nullable_contacts.py  8c9d80557e6c_passwd.py  9aa95156f364_initial.py  ae1787b719bb_up.py  c9bcd1c37a61_clients_unique_del.py  dd157d36a59e_user.py  f9a7acad0104_clients.py
modules/: exceptions.py
modules/auth/: __init__.py  authenticate_user.py  exceptions.py  internals.py  views.py
modules/auth/schemas/: authuser.py
modules/clients/: __init__.py  exceptions.py
modules/clients/schemas/clients/: request.py  response.py  source.py
modules/clients/schemas/hint/: response.py  source.py
modules/clients/schemas/occupation/: request.py  response.py  source.py
modules/clients/views/: client.py  occupation.py
modules/occupation/: __init__.py  views.py
modules/occupation/schemas/: request.py  response.py  source.py
modules/user/: __init__.py  authenticate_user.py  enums.py  exceptions.py  views.py
modules/user/schemas/: request.py  response.py  source.py
tables/: __init__.py  auth_user.py  client.py  occupation.py  user.py
