[tool.poetry]
name = "dating"
version = "0.1.0"
description = ""
authors = ["andrejmaznin <andrejmaznin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.39"
databases = "^0.6.0"
pydantic = "^1.9.1"
asyncpg = "^0.26.0"
python-dotenv = "^0.20.0"
greenlet = "^1.1.2"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
query = "^0.1.4"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
starlette-context = "^0.3.4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

